Mon Sep 28 21:13:53 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/TestCase.h:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:
        * tests/DCPS/TestFramework/TestFramework_T.h:
        * tests/DCPS/TestFramework/TestFramework_T.cpp:

          TestFramework updates; fixed template issues on non-Solaris
          platforms.

Thu Sep 24 21:33:28 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/DestinationOrder.mpc:
        * tests/DCPS/DestinationOrder/TestCase.h:
        * tests/DCPS/DestinationOrder/TestCase.cpp:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.idl:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:

          TestFramework updates; converted DestinationOrder test.

Wed Sep 23 23:09:24 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_test.mpb:
        * MPC/config/dcps_test_tcp.mpb:
        * tests/DCPS/TestFramework:
        * tests/DCPS/TestFramework/Test.idl:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:
        * tests/DCPS/TestFramework/TestFramework_Export.h:

          Initial commit of DCPS TestFramework harness.

Wed Sep 23 21:36:29 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * LICENSE:

          Updated LICENSE verbiage.

Wed Sep 23 16:27:08 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:
        * README:

          Updated documentation for next release.

Wed Sep 23 15:56:51 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * OpenDDS version 2.0 released.

Tue Sep 22 22:54:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>
