@@ -1,3 +1,10 @@
+Tue Sep 29 16:39:52 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * tests/DCPS/TestFramework/TestFramework_T.h:
+        * tests/DCPS/TestFramework/TestFramework_T.cpp:
+
+          Fixes for Windows and Linux hosts.
+
 Mon Sep 28 21:13:53 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * tests/DCPS/DestinationOrder/TestCase.h:
